Fix alignment of alerts

--- a/src/registrar/assets/src/sass/_theme/_alerts.scss
+++ b/src/registrar/assets/src/sass/_theme/_alerts.scss
@@ -10,7 +10,7 @@
 // Fixes that issue
 @include at-media(desktop) {
   // NOTE: !important is used because _font.scss overrides this
-  .usa-alert__body--widescreen {
+  .usa-alert__body {
     max-width: $widescreen-max-width !important;
   }
   .usa-alert--warning{
